Fix Header z-index position on mobile.

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,6 +4,7 @@
   right: 0;
   top: 0;
   padding: 1em 0;
+  z-index: 200;
 }
 
 .header .container {
